--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "sqlmodel (>=0.0.22,<0.0.23)",
     "sqlalchemy-utils (>=0.41.2,<0.42.0)",
     "types-sqlalchemy-utils (>=1.1.0,<2.0.0)",
+    "pydantic[email] (>=2.10.6,<3.0.0)",
     "alembic (>=1.14.1,<2.0.0)",
     "pyqt6 (>=6.8.1,<7.0.0)",
     "pyinstaller (>=6.12.0,<7.0.0)"
