--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,9 @@ dependencies = [
     "sqlalchemy-utils (>=0.41.2,<0.42.0)",
     "types-sqlalchemy-utils (>=1.1.0,<2.0.0)",
     "pydantic[email] (>=2.10.6,<3.0.0)",
+    "pydantic-extra-types (>=2.10.2,<3.0.0)",
     "alembic (>=1.14.1,<2.0.0)",
+    "phonenumbers (>=8.13.54,<9.0.0)",
     "pyqt6 (>=6.8.1,<7.0.0)",
     "pyinstaller (>=6.12.0,<7.0.0)"
 ]
